* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Sep 2018 Released 2.1.2 version
* Update translations from zanata (de, pl updated)
* Add typing-booster.its and typing-booster.loc to avoid making the release descriptions and developer name in typing-booster.appdata.xml translatable.
* Remove code to check whether another instance of the setup tool is running.
* Add new option to avoid adding a space when committing by label or mouse (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/39)
* Update emoji annotations from CLDR
* Do not try to commit if index is >= the current number of candidates (Resolves: rhbz#1630349)
* Add test case for https://bugzilla.redhat.com/show_bug.cgi?id=1630349

* Author: Mike FABIAN <mfabian@redhat.com>
* 04 Sep 2018 Released 2.1.1 version
* Update translations from zanata (es updated, 100% complete now)

* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Jul 2018 Released 2.1.0 version
* emoji-picker: Show a concise description of a selected emoji in the header bar
* Update the setup UI when settings are changed outside of the setup UI
* Migrate IBusConfig to GSettings
* Read emoji data files always in UTF-8

* Author: Mike FABIAN <mfabian@redhat.com>
* 27 Jun 2018 Released 2.0.2 version
* Better Tab handling, use Tab to switch to the next candidate, not to commit

* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Jun 2018 Released 2.0.1 version
* Update translations from zanata (ja updated)
* Update emoji annotations from CLDR
* Fix some bugs in the usage of “prefix” for prefixes other than “/usr” (For FreeBSD)
* Make itb_util.get_ime_help() work on FreeBSD
* Update UnicodeData.txt to Unicode 11.0.0
* Remove useless 't-nil vi-base': 'vi-base.mim', from M17N_INPUT_METHODS
* Remove extra space in entry for sa-IAST input method to make it work
* Show in the setup  tool in the input listbox whether minput_open_im() succeeded.
* Use the rocket icon emoji_u1f680.svg from the “Noto Color Emoji” font
